# ffmpeg

./: CMakeLists.txt  main.cpp
FFmpeg-n4.3.3/: build  build.sh
FFmpeg-n4.3.3/darwin/include/libavutil/: ffversion.h
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
